--- a/public/index.html
+++ b/public/index.html
@@ -23,18 +23,15 @@
 
         <!-- HEADER AND TODO COUNT -->
         <div class="jumbotron text-center">
-            <h1>I'm a Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
+            <h1>Points!</h1>
         </div>
 
-        <!-- TODO LIST -->
-        <div id="todo-list" class="row">
+        <div id="point-list" class="row">
             <div class="col-sm-4 col-sm-offset-4">
 
                 <!-- LOOP OVER THE TODOS IN $scope.todos -->
-                <div class="checkbox" ng-repeat="todo in todos">
-                    <label>
-                        <input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
-                    </label>
+                <div ng-repeat="point in points">
+                    <label>{{point.lat}}</label>
                 </div>
 
             </div>
@@ -44,14 +41,14 @@
         <div id="todo-form" class="row">
             <div class="col-sm-8 col-sm-offset-2 text-center">
                 <form>
-                    <div class="form-group">
+                    <div>
 
-                        <!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-                        <input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy that will love me forever" ng-model="formData.text">
+                        <input type="text" class="form-control input-lg text-center" ng-model="formDataLat">
+                        <input type="text" class="form-control input-lg text-center" ng-model="formDataLong">
                     </div>
 
                     <!-- createToDo() WILL CREATE NEW TODOS -->
-                    <button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
+                    <button type="submit" class="btn btn-primary btn-lg" ng-click="addPoint()">Add</button>
                 </form>
             </div>
         </div>
@@ -59,17 +56,17 @@
     </div>
 
     <!--<div class="container" id="map"></div>-->
-    <script type="text/javascript">
+    <!--<script type="text/javascript">-->
 
-    var map;
-    function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: 33.755, lng: -84.39},
-            zoom: 8
-        });
-    }
+    <!--var map;-->
+    <!--function initMap() {-->
+        <!--map = new google.maps.Map(document.getElementById('map'), {-->
+            <!--center: {lat: 33.755, lng: -84.39},-->
+            <!--zoom: 8-->
+        <!--});-->
+    <!--}-->
 
-    </script>
+    <!--</script>-->
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIuCKiNReJwTU4frhP3ndPyvdrZt60pJU&callback=initMap">
     </script>
