--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,11 @@
     <title>PaddleBuddy Map Data</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><!-- load jquery -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script><!-- load angular -->
-    <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
-    <script src="/../node_modules/angular-google-maps\dist"
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIuCKiNReJwTU4frhP3ndPyvdrZt60pJU">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIuCKiNReJwTU4frhP3ndPyvdrZt60pJU">
     </script>
+    <script src="/../node_modules/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="core.js"></script>
+
 </head>
 <body ng-controller="mainController">
     <nav class="navbar navbar-default">
