fixed pathpoint implementation

--- a/public/index.html
+++ b/public/index.html
@@ -22,22 +22,11 @@
         <div id="map" class="container"></div>
     </div>
     <div class="row" style="text-align: center">
-        <!--<ul class="btn-group">-->
-            <!--<li><a class="btn btn-default" ng-click="submitPoints()">Submit</a></li>-->
-            <!--<li><a class="btn btn-default" ng-click="undoAddPoint()">Undo</a></li>-->
-            <!--<li><a class="btn btn-default" ng-click="clearPoints()">Clear</a></li>-->
-        <!--</ul>-->
         <div class="btn-group" role="group">
-            <button id="submitBtn" class="btn btn-default" ng-click="submitPoints()">Submit</button>
-            <button id="undoBtn" class="btn btn-default" ng-click="undoAddPoint()">Undo</button>
+            <button id="submitBtn" class="btn btn-default" ng-click="addPoints()">Submit</button>
+            <button id="undoBtn" class="btn btn-default" ng-click="removePoint()">Undo</button>
             <button id="clearBtn" class="btn btn-default" ng-click="clearPoints()">Clear</button>
         </div>
     </div>
-    <!--<div class="centered-btns">-->
-        <!--<button id="submitBtn" class="btn btn-default" ng-click="submitPoints()">Submit</button>-->
-        <!--<button id="undoBtn" class="btn btn-default" ng-click="undoAddPoint()">Undo</button>-->
-        <!--<button id="clearBtn" class="btn btn-default" ng-click="clearPoints()">Clear</button>-->
-    <!--</div>-->
-
 </body>
 </html>
