--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/dist/angular-list-group.css">
     <title>PaddleBuddy Map Data</title>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script><!-- load angular -->
+    <script src="/dist/angular.min.js"></script><!-- load angular -->
+    <script src="/dist/jquery-1.12.0.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIuCKiNReJwTU4frhP3ndPyvdrZt60pJU">
     </script>
     <script src="core.js"></script>
 
 </head>
 <body ng-controller="MapController">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">PaddleBuddy</a>
         </div>
     </nav>
-    <div class="container">
+    <div id="main" class="container">
         <div class="row">
             <div id="map" class="col-xs-9"></div>
             <div id="riverList" class="col-xs-3" ng-repeat="river in rivers">
