--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
     <title>PaddleBuddy</title>
-    <script src="/dist/angular.min.js"></script>
-    <script src="/dist/angular-route.min.js"></script>
-    <script src="/dist/jquery-1.12.0.min.js"></script>
+    <script src="dist/angular.min.js"></script>
+    <script src="dist/angular-route.min.js"></script>
+    <script src="dist/jquery-1.12.0.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIuCKiNReJwTU4frhP3ndPyvdrZt60pJU">
     </script>
     <script src="js/main.js"></script>
