added markers for every point; working on infowindow stuff

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body ng-controller="mainController">
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#/">PaddleBuddy</a>
+            <!--<a class="navbar-brand" href="#/">PaddleBuddy</a>-->
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li> <a href="#/"> <i class="glyphicon glyphicon-home white"></i> </a> </li>
