--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIuCKiNReJwTU4frhP3ndPyvdrZt60pJU">
     </script>
     <script src="js/main.js"></script>
-
+    <script src="js/login.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/profile.js"></script>
+    <script src="js/register.js"></script>
 </head>
 <body ng-controller="mainController">
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom">
@@ -22,6 +25,8 @@
         <ul class="nav navbar-nav navbar-right">
             <li> <a href="#/"> <i class="glyphicon glyphicon-home white"></i> </a> </li>
             <li> <a href="#map"> <i class="glyphicon glyphicon-globe white"></i> </a> </li>
+            <li> <a href="#login"> <i class="glyphicon glyphicon-user white"></i> </a> </li>
+            <li> <a href="#register"> <i class="glyphicon glyphicon-user white"></i> </a> </li>
         </ul>
     </nav>
     <div id="main" class="">
